media query to ensure no whitespace at the end of header on smaller devices

--- a/components/layout/MainNavigation.module.css
+++ b/components/layout/MainNavigation.module.css
@@ -20,6 +20,7 @@
   margin: 0;
   padding: 0;
   display: flex;
+  justify-content: space-between;
   align-items: baseline;
 }
 
@@ -37,4 +38,13 @@
 .header a:active,
 .header a.active {
   color: white;
+}
+
+@media only screen and (max-width: 600px) {
+  .header li {
+    margin: 0;
+  }
+  .header a {
+    font-size: 20px;
+  }
 }
